# rust-api-boilerplate

./: .env  Cargo.toml  README.md
src/: lib.rs  main.rs
src/controllers/: product_controller.rs  user_controller.rs
src/routes/: user_routes.rs
src/services/: user_services.rs
tests/: api_test.rs
