[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web =  "4.3.1"
dotenv = "0.15.0"
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"]}

[dev-dependencies]
actix-rt = "2.5"
assert-json-diff = "2.0.2"
